<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DataLogger</string>
    <string name="action_settings">Settings</string>
	
    <string name="date_text">Date: </string>
    <string name="time_text">Time: </string>
    <string name="volt_text">Volts: </string>
    <string name="log_interval_label">Log Interval: </string>
    <string name="log_interval_hint">seconds</string>
    <string name="start_data_log_text">Start Data Log</string>
    <string name="stop_data_log_text">Stop Data Log</string>

</resources>
