<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="20sp"
        android:text="@string/date_text" />
    
    <TextView
        android:id="@+id/timeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="20sp"
        android:text="@string/time_text" />
    
    <TextView
        android:id="@+id/voltTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="20sp"
        android:text="@string/volt_text" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp" >
        
        <TextView 
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/log_interval_label"
        	android:textSize="20sp" />
        
        <EditText 
            android:id="@+id/intervalEditText"
            android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:inputType="number"
        	android:hint="@string/log_interval_hint" />
        
    </LinearLayout>
    
    <Button
        android:id="@+id/dataLogButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/start_data_log_text" />
	
</LinearLayout>
